--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ flask==3.0.2
 pdfminer.six==20231228
 python-dotenv==1.0.1
 werkzeug==3.0.1
-openai==1.12.0
-deepseek-ai==0.1.0
-aiohttp==3.9.3 
+anthropic==0.7.4
+aiohttp==3.9.3
+asgiref==3.7.2 
